asteria/core/tests/errors/elaboration_errors/type_variable_not_in_scope_hint_closest_type_variables.asteriacore
f : forall (foo : Type).
    forall (bar : Type).
    forall (baz : Type).
      barr
  = f
  ;;
